--- a/app.json
+++ b/app.json
@@ -1,4 +1,34 @@
 {
-  "name": "xercoachRN",
-  "displayName": "xercoachRN"
+  "expo": {
+    "name": "xercoachRN",
+    "description": "",
+    "slug": "xercoachRN",
+    "privacy": "unlisted",
+    "sdkVersion": "27.0.0",
+    "platforms": ["ios", "android"],
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/images/icon.png",
+    "splash": {
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "packagerOpts": {
+      "sourceExts": [
+        "ts",
+        "tsx"
+      ],
+      "transformer": "node_modules/react-native-typescript-transformer/index.js"
+    },
+    "ios": {
+      "supportsTablet": true
+    }
+  }
 }
