--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   },
   "dependencies": {
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
-    "exp": "^54.0.0",
-    "expo": "^27.0.1",
+    "react-native": "0.55.4",
     "@expo/vector-icons": "^6.3.1",
     "lodash": "^4.17.10",
     "react-native-platform-touchable": "^1.1.1",
@@ -20,7 +18,6 @@
     "@types/react": "^16.4.6",
     "@types/react-native": "^0.55.26",
     "@types/react-test-renderer": "^16.0.1",
-    "@types/expo": "^26.0.0",
     "babel-jest": "23.2.0",
     "babel-preset-react-native": "4.0.0",
     "jest": "23.2.0",
