--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.4",
-    "@expo/vector-icons": "^6.3.1",
+    "react-native-vector-icons": "^4.6.0",
     "lodash": "^4.17.10",
     "react-native-platform-touchable": "^1.1.1",
     "react-navigation": "1.5.11"
   },
   "devDependencies": {
-    "@types/react": "^16.4.6",
-    "@types/react-native": "^0.55.26",
+    "@types/react": "^16.3.1",
+    "@types/react-native": "^0.55.4",
     "@types/react-test-renderer": "^16.0.1",
     "babel-jest": "23.2.0",
     "babel-preset-react-native": "4.0.0",
     "jest": "23.2.0",
+    "react-addons-test-utils": "^15.6.2",
     "react-native-typescript-transformer": "^1.2.10",
-    "react-test-renderer": "^16.3.1",
     "ts-jest": "^23.0.0",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
