--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "xercoachRN",
     "description": "",
-    "slug": "xercoachRN",
+    "slug": "XerCoach",
     "privacy": "unlisted",
     "sdkVersion": "27.0.0",
     "platforms": ["ios", "android"],
