--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/react": "^16.3.1",
     "@types/react-native": "^0.55.4",
+    "@types/react-native-vector-icons": "^4.6.1",
     "@types/react-navigation": "^2.0.9",
     "@types/react-test-renderer": "^16.0.1",
     "babel-jest": "23.2.0",
