--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "lodash": "^4.17.10",
     "react": "16.3.1",
     "react-native": "0.55.4",
-    "react-native-vector-icons": "^4.6.0",
-    "lodash": "^4.17.10",
     "react-native-platform-touchable": "^1.1.1",
+    "react-native-swiper": "^1.5.13",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "1.5.11"
   },
   "devDependencies": {
