--- a/app.json
+++ b/app.json
@@ -1,11 +1,16 @@
 {
+  "name": "xercoachRN",
+  "displayName": "XerCoach",
+  "description": "Your exercise coach",
   "expo": {
     "name": "xercoachRN",
-    "description": "",
     "slug": "XerCoach",
     "privacy": "unlisted",
     "sdkVersion": "27.0.0",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
