--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-platform-touchable": "^1.1.1",
+    "react-native-progress": "^3.5.0",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "1.5.11"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.110",
     "@types/react": "^16.3.1",
     "@types/react-native": "^0.55.4",
     "@types/react-native-vector-icons": "^4.6.1",
