--- a/app.json
+++ b/app.json
@@ -6,11 +6,8 @@
     "name": "xercoachRN",
     "slug": "XerCoach",
     "privacy": "unlisted",
-    "sdkVersion": "27.0.0",
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "sdkVersion": "29.0.0",
+    "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -22,14 +19,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "packagerOpts": {
-      "sourceExts": [
-        "ts",
-        "tsx"
-      ],
+      "sourceExts": ["ts", "tsx"],
       "transformer": "node_modules/react-native-typescript-transformer/index.js"
     },
     "ios": {
