--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xercoachRN",
+  "name": "xercoach-rn",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,8 +7,7 @@
     "bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "test": "jest",
     "android-bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && react-native run-android",
-    "preinstall": "rm -rf typings",
-    "postinstall": "npx typings install",
+    "install-typings": "npx typings install",
     "expo": "expo start",
     "android": "npx react-native run-android",
     "ios": "npx react-native run-ios",
